src/test/compile-fail/output-type-mismatch.rs
// error-pattern: mismatched types

fn f() { }

fn main() { let i: int; i = f(); }
